tweaked the layout and logo

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,10 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Phanaar</span>
+                    <!-- <i class="fa fa-play-circle"></i>  <span class="light">Phanaar</span> -->
+                    <div>
+                        <img src="/img/logo.png" style="width:30px;height:30px;"> <span class="light">Phanaar</span>
+                    </div>
                 </a>
             </div>
 
