--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,10 +5,10 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
+                <a class="page-scroll" href="#page-top">
                     <!-- <i class="fa fa-play-circle"></i>  <span class="light">Phanaar</span> -->
-                    <div>
-                        <img src="/img/logo.png" style="width:30px;height:30px;"> <span class="light">Phanaar</span>
+                    <div style="padding-top: 10px">
+                        <img src="/img/logo.png" style="width:30px;height:35px;"> <span class="light">Phanaar</span>
                     </div>
                 </a>
             </div>
