--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,20 +1,9 @@
-    <!-- About Section -->
-    <!-- <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/jeromelachaud">Jerome Lachaud</a></p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-            </div>
-        </div>
-    </section> -->
+
 
     <section id="about" class="container about-section  text-center">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>About Phanaar</h2>
+                    <h2> <img src="/img/logo.png" style="width:100px;height:120px;"> About Phanaar</h2>
                     <p>Phanaar is a non-profit organisation with a clear movement dedicated to promoting educational and sustainable development among poor communities in Sudan.</p>
                     <p>We are a network of active young people from different educational backgrounds and cultures working together to lift Sudan from the poor rates of human development.</p>
                     <p>Based in the Netherlands, Phanaar also aims to establish a solid structure for Sudanese social and cultural projects in the Netherlands. We aim to promote intercultural dialogue and celebrate the diversity of cultural expression. Our overall goal is to contribute to intercultural understanding and international cultural cooperation between Sudan and the Netherlands.</p>
