updated layout, looks better on mobile browser

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,8 +2,9 @@
 
     <section id="about" class="container about-section  text-center">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2> <img src="/img/logo.png" style="width:100px;height:120px;"> About Phanaar</h2>
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h2 style="margin:10px">About us</h2>
+                    <img src="/img/logo with text.png" style="width:100%;max-width:150px;">
                     <p>Phanaar is a non-profit organisation with a clear movement dedicated to promoting educational and sustainable development among poor communities in Sudan.</p>
                     <p>We are a network of active young people from different educational backgrounds and cultures working together to lift Sudan from the poor rates of human development.</p>
                     <p>Based in the Netherlands, Phanaar also aims to establish a solid structure for Sudanese social and cultural projects in the Netherlands. We aim to promote intercultural dialogue and celebrate the diversity of cultural expression. Our overall goal is to contribute to intercultural understanding and international cultural cooperation between Sudan and the Netherlands.</p>
